Fix collapse header title and arrow-icon alignment

--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -1,4 +1,5 @@
 .collapse-button {
+  align-items: center;
   background-color: transparent;
   border: 0 none;
   box-sizing: border-box;
